--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,8 @@
 applications:
 - path: .
-  memory: 1024M
+  memory: 512M
   instances: 1
   domain: mybluemix.net
-  name: theinterface_POC
-  host: theinterface_POC
+  name: interfacedealerportal
+  host: interfacedealerportal
   disk_quota: 1024M
