--- a/manifest.yml
+++ b/manifest.yml
@@ -3,6 +3,6 @@ applications:
   memory: 512M
   instances: 1
   domain: mybluemix.net
-  name: interfacedealerportal
-  host: interfacedealerportal
+  name: dealer_portal
+  host: dealer_portal
   disk_quota: 1024M
