--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,8 @@
 applications:
 - path: .
-  memory: 1024M
+  memory: 512M
   instances: 1
   domain: mybluemix.net
-  name: mss_dealerportal
-  host: mss_dealerportal
+  name: dealerportal@mss
+  host: dealerportal@mss
   disk_quota: 1024M
