--- a/manifest.yml
+++ b/manifest.yml
@@ -3,6 +3,6 @@ applications:
   memory: 512M
   instances: 1
   domain: mybluemix.net
-  name: dealerportal@mss
-  host: dealerportal@mss
+  name: dealerportalmss
+  host: dealerportalmss
   disk_quota: 1024M
