--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node app.js",
     "test": "mocha test"
   },
+  "keywords": [
+    "cors"
+  ],
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
