--- a/package.json
+++ b/package.json
@@ -7,15 +7,13 @@
     "start": "node app.js",
     "test": "mocha test"
   },
-  "keywords": [
-    "cors"
-  ],
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "express-session": "^1.15.5",
     "mongodb": "^2.2.9",
-    "moment": "2.18.1"
+    "moment": "2.18.1",
+     "cors": "*"
   },
   "author": "Interface POC Team",
   "license": "ISC",
